# vprc

./: .dockerignore  .gitignore  Containerfile  LICENSE.txt  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: configuration.md  introduction.md  quickstart.md
src/scripts/: create_composite.py  examine_temporal.py  examine_vpr.py
src/vprc/: __init__.py  bright_band.py  classification.py  climatology.py  clutter.py  composite.py  config.py  constants.py  io.py  io_export.py  radar_defaults.toml  smoothing.py  temporal.py  vpr_correction.py
src/vprc/io/: __init__.py  (+2 more)
tests/: README.md  legacy_parser.py  test_bright_band.py  test_classification.py  test_climatology.py  test_clutter.py  test_composite.py  test_io.py  test_io_export.py  test_legacy_comparison.py  test_smoothing.py  test_temporal.py  test_temporal_e2e.py  test_vpr_correction.py
tests/data/: 202208171100_VIM.VVP_40.cor  202208171100_VIM.VVP_40.profile  202208171100_VIM.VVP_40.txt  202208171115_VIM.VVP_40.cor  202208171115_VIM.VVP_40.profile  202208171115_VIM.VVP_40.txt  202208171130_VIM.VVP_40.cor  202208171130_VIM.VVP_40.profile  202208171130_VIM.VVP_40.txt  202208171200_VIM.VVP_40.cor  202208171200_VIM.VVP_40.profile  202208171200_VIM.VVP_40.txt  202208171215_VIM.VVP_40.cor  202208171215_VIM.VVP_40.profile  202208171215_VIM.VVP_40.txt  202208171230_VIM.VVP_40.cor  202208171230_VIM.VVP_40.profile  202208171230_VIM.VVP_40.txt  202208171245_VIM.VVP_40.cor  202208171245_VIM.VVP_40.corave  202208171245_VIM.VVP_40.profile  202208171245_VIM.VVP_40.txt  202308281000_KAN.VVP_40.txt  202308281000_KOR.VVP_40.txt  202308281000_VIH.VVP_40.txt  202508241100_KAN.VVP_40.cor  202508241100_KAN.VVP_40.profile  202508241100_KAN.VVP_40.txt  (+2 more)
