[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vprc"
dynamic = ["version"]
description = 'FMI VPR correction'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Jussi Tiira", email = "jussi.tiira@fmi.fi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "wradlib",
]

[project.urls]
#Documentation = "https://github.com/Jussi Tiira/vprc#readme"
#Issues = "https://github.com/Jussi Tiira/vprc/issues"
#Source = "https://github.com/Jussi Tiira/vprc"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/vprc"]

[tool.hatch.build.targets.wheel.force-include]
"src/vprc/radar_defaults.toml" = "vprc/radar_defaults.toml"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE.txt",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/vprc tests}"

[tool.coverage.run]
source_pkgs = ["vprc", "tests"]
branch = true
parallel = true
omit = [
]

[tool.coverage.paths]
vprc = ["src/vprc", "*/vprc/src/vprc"]
tests = ["tests", "*/vprc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
